<resources>
    <string name="app_name">GetHabit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="server_client_id">547684386780-a4jo0jmhap40fu7jll20mo81i08fife9.apps.googleusercontent.com</string>
    <string name="hello">Hello</string>
    <string name="day">Дни</string>
    <string name="tv_second">Сек</string>
    <string name="tv_hours">Часы</string>
    <string name="tv_minutes">Мин</string>
    <string name="tv_relapse">Рецидив</string>
    <string name="tv_attempts">Попыток : %d</string>
    <string name="tv_history">История</string>
    <string name="tv_month">января</string>
    <string name="tv_year">2023 г.</string>
    <string name="tv_time">16:30</string>
    <string name="_recediv">Рецидив</string>
    <string name="tv_taime">Таймер привычки курение будет обнулен</string>
    <string name="choose_language">Выберите Язык…</string>
    <string name="change_language">Сменить язык</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_title">Название</string>
    <string name="tv_emoji">Смайлик 🎸 </string>
    <string name="tv_create">Создать</string>
    <string name="tv_delete">Удалить?</string>
    <string name="btn_no">Нет</string>
    <string name="btn_yes">Да</string>
    <string name="tv_code">Код</string>
    <string name="tv_accept">Принять</string>
    <string name="_00_00_00_00">00:00:00:00</string>
    <string name="tv_record_9">Рекорд - 9 дней</string>
    <string name="btn_register">Зарегистрироваться</string>
    <string name="btn_share">Поделиться кодом</string>
    <string name="tv_sign_in">sign in</string>
    <string name="btn_new_habit">Новая привычка</string>
    <string name="tv_new_habit">Новая привычка</string>
    <string name="tv_attempt">Попытка : </string>
    <string name="tv_record">Рекорд : %d </string>
    <string name="tv_main">Главная</string>
    <string name="tv_subscriptions">Подписки</string>
    <string name="tv_settings">Настройки</string>
    <string name="reset_to_zero">Обнулить?</string>
    //Follow
    <string name="follows_display">На этом экране вы можете наблюдать за успехом ваших подписчиков</string>
    <string name="follows_fab">При клике вы можете вставить код друга и наблюдать за его привычками</string>
    //Detail
    <string name="detail_display">Здесь вы можете видеть подробную информацию о вашей привычке</string>
    <string name="detail_habit_name_habit">Наименование вашей привычки</string>
    <string name="detail_habit_name">Ваше имя</string>
    <string name="detail_habit_progress">Это пометка следит за вашим прогресcом</string>
    <string name="detail_habit_time">Таймер вашей привычки</string>
    <string name="detail_habit_btn_relapse">При нажатии на кнопку ваша привычка обнуляется</string>
    <string name="detail_habit_attempts">Счетчик поможет вам посчитать ваши попытки</string>
    <string name="detail_habit_record">Здесь вы можно просмотреть какой у вас рекорд</string>
    <string name="detail_habit_history_list">Ваша история попыток</string>
    //Main
    <string name="main_habit_display">Это ваш главный экран, здесь вы можете увидеть ваши привычки и добавить их</string>
    <string name="main_habit_list">"Здесь будут появляться ваши привычки которые вы хотите искоренить или внедрить в свою жизнь "</string>
    <string name="main_habit_fab">При нажатии вы можете добавить новую привычку и добавить смайлик</string>
    //Setting
    <string name="settings_display">Это экран ваших настроек</string>
    <string name="settings_display_singBtn">При нажатии на кнопку вы можете пройти регистрацию</string>
    <string name="settings_display_shareBtn">При нажатии на эту кнопку, вы можете отправить ваш уникальный код вашему другу.Ваш друг, получив этот код, сможет вставить его в свой экран подписок и наблюдать за вашими ежедневными привычками, которые отображаются на вашем главном экране.</string>
    <string name="settings_display_changeLang">Здесь можно сменить язык</string>
    <string name="habit_clear">Привычка будет обнулена</string>
    <string name="sync">Синхронизироваться</string>
    <string name="success">Успешно</string>
    <string name="empty_habit_desc">Чтобы начать привычку нажмите на кнопку “+” и укажите название и иконку в виде одного смайлика</string>
    <string name="empty_follow_desc">Чтоб подписаться на кого то нажмите на кнопку “+” и укажите код который вам отправили через кнопку ”Поделиться своим кодом”</string>
    <string name="blue">Синий</string>
    <string name="red">Красный</string>
    <string name="orange">Оранжевый</string>
    <string name="yellow">Жёлтый</string>
    <string name="black">Черный</string>
    <string name="green">Зелёный</string>
    <string name="pink">Розовый</string>
    <string name="violet">Фиолетовый</string>
    <string name="heavenly">Небесный</string>
    <string name="bilberry">Черничный</string>
    <string name="dark_brown">Коричневый </string>
    <string name="greyish_blue">Сине-серый</string>
    <string name="btn_further">Далее</string>
    <string name="tv_further">Далее...</string>
    <string name="btn_change_the_subject">Поменять Тему</string>
    <string name="google">Для работы функции подписки требуется Google аккаунт</string>
    <string name="btn_change_theme">Можете изменить тему приложения</string>
    <string name="btn_sync">При нажатии на эту кнопку, ваши привычки мгновенно синхронизируются с сервером, и они автоматически добавляются на ваш главный экран, даже если вы сменили устройство и вошли в приложение с другого телефона.</string>
    <string name="not_sign">Вы не зарегестрированы</string>
    <string name="habit_sync">Привычки будут синхронизированы</string>
    <string name="actual_data">Актуализация данных для подписчиков</string>
    <string name="notification_not_come">Уведомления не будут приходить</string>
    <string name="want_pass_instruction">Желаете ли вы пройти обучение?</string>
    <string name="follow_delete">Подписка на %s  будет удалена</string>
    <string name="relapse_habit">Рецедив привычки : %s</string>
    <string name="subscribe">Подписаться</string>
    <string name="exit_account">Выйти с аккаунта</string>
    <string name="my_code">Мой код</string>
    <string name="scan">Сканировать</string>
    <string name="enter_code">Ввести код</string>
    <string name="habit_delete">Привычка %s будет удалена</string>
    <string name="bad">Плохие</string>
    <string name="good">Хорошие</string>
    <string name="bad_habit">Плохие привычки</string>
    <string name="good_habit">Хорошие привычки</string>
    <string name="today_check">Сегодня было отмечено</string>
    <string name="you_sure">Вы действительно сегодня закрепили \n привычку %s ?</string>
    <string name="last_check">Последняя отметка привычки \n %s была \n\n %s</string>
</resources>