<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    android:id="@+id/main_settings"
    android:orientation="vertical"
    tools:context="com.lawlett.habittracker.fragment.settings.SettingsFragment">

    <TextView
        android:id="@+id/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12sp"
        android:text="@string/tv_settings"
        android:textColor="@color/black"
        android:textSize="28sp" />

    <Button
        android:id="@+id/signBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_background"
        android:text="@string/btn_register"
        android:textColor="@color/white" />

    <Button
        android:layout_marginTop="12dp"
        android:id="@+id/shareBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_background"
        android:text="@string/btn_share"
        android:textColor="@color/white" />

    <Button
        android:layout_marginTop="12dp"
        android:id="@+id/change_lang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_background"
        android:text="@string/change_language"
        android:textColor="@color/white" />

</LinearLayout>