<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:fitsSystemWindows="true"
    android:background="@color/white"
    app:cardCornerRadius="12dp"
    tools:context="com.lawlett.habittracker.bottomsheet.CreateHabitDialog">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="12dp">

        <include layout="@layout/title_card" />

        <EditText
            android:maxLines="1"
            android:id="@+id/nameEd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_bg"
            android:hint="@string/tv_title"
            android:padding="12dp" />

        <EditText
            android:id="@+id/emojiEd"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/edit_bg"
            android:hint="@string/tv_emoji"
            android:imeOptions="actionDone"
            android:maxLines="1"
            android:padding="12dp" />

        <Button
            android:id="@+id/createBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/rectangle_background"
            android:text="@string/tv_create"
            android:textColor="?attr/textColor"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>